# geser

./: CMakeLists.txt
geser/: bounds.cpp  bounds.hpp  svg_widget.cpp  svg_widget.hpp
geser/private/: geometry.cpp  geometry.hpp
